src/App.css
h4 {
    margin: 0 10px 0 0;
}

#App {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    text-align: center;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-around;
    overflow: auto;
}

#polaris-logo {
    width: 150px;
    height: 25px;
}

#react-logo {
    animation: react-logo-spin infinite 20s linear;
    height: 40px;
}

@keyframes react-logo-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.App-title {
    font-size: 1.5em;
}

.App-intro {
    font-size: large;
}

#App-header {
    background-color: #222;
    box-sizing: border-box;
    /*min-height: 50px !important;*/
    height: 60px;
    width: 100%;
    padding: 0 10px;
    color: #e4e4e4;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
    flex-grow: 0;
    z-index: 20;
}

#App-body {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    align-content: stretch;
    align-items: stretch;
    flex-grow: 5;
}

#control-panel {
    background-color: #8a8b8d;/*gray;*/
    width: 20%;
    height: fit-content;
    min-width: 200px;
    flex-grow: 1;
    z-index: 10;
}

#open-close-panel {
    display: none;
}

#map-container {
    background-color: #e4e4e4;
    width: 80%;
    /*min-height: 400px;*/
    flex-grow: 4;
    z-index: 9;
}

.hidden {
    /*display: none;*/
    visibility: hidden;
    z-index: 0;
}

.flexDefault {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: flex-start;
    align-content: flex-start;
}


.toggle, .select {
    margin: 10px auto;
    min-width: 200px;
    z-index: 11;
}

.button {
    margin: 10px auto;
    width: 150px;
    height: 30px;
    background-color: #2a57ab;
    color: #e4e4e4;
    font-size: 1em;
    border-radius: 5px;
    border: solid black 1px;
    text-align: center;
    cursor: pointer;
}

.button img {
    height: 100%;
    transition: transform 0.5s step-end;
}

.loading {
    position: fixed;
    z-index: 100000;
    width: 200px;
    height: 150px;
    margin: -75px 0 0 -100px;
    top: 50%;
    left: 50%;
    color: #2a57ab;
    display: flex;
    flex-flow: column;
    align-items: center;
    text-align: center;
    font-weight: bold;
    font-size: 1.5em;
}

.alert-box {
    position: fixed;
    bottom: 20px;
    left: 50%;
    width: 50%;
    height: 3em;
    box-sizing: border-box;
    padding: 1em 0;
    text-align: center;
    color: #e4e4e4;
    margin: 0 0 0 -25%;
    border: 2px solid;
    border-radius: 5px;
    z-index: 19;
}

.success {
    background-color: #2fcc70b3;
    border-color: #2fcc70;
}

.error {
    background-color: #e84c3db3;
    border-color: #e84c3d;
}

.warning {
    background-color: #f1c40fb3;
    border-color: #f1c40f;
}

.veryBold {
    font-weight: 700;
}

.down > img {
    transform: rotate(90deg);
}

.up > img {
    transform: rotate(-90deg);
}

div.Select-control {
    background-color: #5d5d5d !important;
    color: #e4e4e4 !important;
    border-radius: 5px;
    border-color: #2a57ab !important;
}

.Select-value-label, div.Select-option, .Select-menu-outer {
    color: #e4e4e4 !important;
    background-color: #5d5d5d !important;
    border-color: #2a57ab !important;
}

.Select-menu-outer div:hover {
    background-color: #3c9aff !important;
}


@media only screen and (max-width: 999px) and (max-height: 700px) {
    #polaris-logo {
        width: 90px;
        height: 15px;
    }

    #App-body {
        flex-flow: column nowrap;
    }

    #control-panel {
        position: fixed;
        top: 60px;
        width: 100%;
        padding-top: 30px;
        transition: top 0.5s linear;
    }

    #open-close-panel {
        display: inline;
        position: fixed;
        top: 60px;
        left: 50%;
        margin: 0 0 0 -50px;
        z-index: 11;
        width: 100px;
    }

    #map-container {
        width: 100%;
        height: 100%;
    }

    .hidden-panel {
        top: -300px !important;
    }

    .alert-box {
        position: fixed;
        bottom: 50px;
        left: 0;
        width: 100%;
        margin: 0;
    }
}

